--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
         <meta name="description" content="This is a site about MEK Hair Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Company - MEK Hair Studio - Birmingham</title>
-        <link rel="shortcut icon" href="..\images\favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="..\css\topnavbar.css">
-        <link rel="stylesheet" type="text/css" href="..\css\fpic.css">
-        <link rel="stylesheet" type="text/css" href="..\css\welcome.css">
-        <link rel="stylesheet" type="text/css" href="..\css\services.css">
-        <link rel="stylesheet" type="text/css" href="..\css\where.css">
-        <link rel="stylesheet" type="text/css" href="..\css\team.css">
-        <link rel="stylesheet" type="text/css" href="..\css\gallery.css">
-        <link rel="stylesheet" type="text/css" href="..\css\pricelist.css">
+        <link rel="stylesheet" type="text/css" href="css\topnavbar.css">
+        <link rel="stylesheet" type="text/css" href="css\fpic.css">
+        <link rel="stylesheet" type="text/css" href="css\welcome.css">
+        <link rel="stylesheet" type="text/css" href="css\services.css">
+        <link rel="stylesheet" type="text/css" href="css\where.css">
+        <link rel="stylesheet" type="text/css" href="css\team.css">
+        <link rel="stylesheet" type="text/css" href="css\gallery.css">
+        <link rel="stylesheet" type="text/css" href="css\pricelist.css">
         <!--<link rel="stylesheet" type="text/css" href="..\css\footer.css">-->
         
-        <script src="..\JavaScript\navbar.js"></script>
+        <script src="JavaScript\navbar.js"></script>
     </head>
 
     <body>
         <nav class="topnav" id="myTopnav">
-            <img id="navlogo" src="C:\Users\xoneu\Desktop\MEK Hair Studio\images\mekhairstudio.png" alt="MEK Logo">
+            <img id="navlogo" src="images\mekhairstudio.png" alt="MEK Logo">
             <a href="#contact" class="active">Contact</a>
             <a href="#prices">Prices</a>
             <a href="#services">Services</a>
@@ -37,7 +37,7 @@
         </nav>
 
         <div class="fpic">
-            <img id="fpic" src="..\images\first.jpg" alt="hair studio">
+            <img id="fpic" src="images\first.jpg" alt="hair studio">
             <div class="abouttext">
                 MEK Hair Studio
             </div>
@@ -53,15 +53,15 @@
 
         <div class="row">
             <div class="column">
-                <img src="..\images\cuts.png" alt="cuts">
+                <img src="images\cuts.png" alt="cuts">
                 <h6>Cuts</h6>
             </div>
             <div class="column">
-                <img src="..\images\therapy.png" alt="therapy">
+                <img src="images\therapy.png" alt="therapy">
                 <h6>Therapies</h6>
             </div>
             <div class="column">
-                <img src="..\images\styling.png" alt="styling">
+                <img src="images\styling.png" alt="styling">
                 <h6>Styling</h6>
             </div>
         </div>
@@ -75,22 +75,22 @@
         <div class="team"><h2>Team</h2></div>
 
         <div class="flex-container">
-            <div><img id="irene" src="..\images\itsme.jpg" height="100px" width="100px"></div>
+            <div><img id="irene" src="images\itsme.jpg" height="100px" width="100px"></div>
             <div><p>Hi, my name is Irene <br>and i' m the founder of MEK Hair Studio<br>
             I start when i was 16.<br> Thanks a lot.</p></div>
             <div><p>Hi, my name is Katerina <br>and i' m the co- founder of MEK Hair Studio<br>
                 I start when i was 16.<br> Thanks a lot.</p></div>
-            <div><img id="katerina" src="..\images\itsme.jpg" height="100px" width="100px"></div>
+            <div><img id="katerina" src="images\itsme.jpg" height="100px" width="100px"></div>
         </div>
 
         <div class="gallery"><h2>Gallery</h2></div>
         <div class="imgcontainer">
-            <img src="..\images\1.png">
-            <img src="..\images\2.jpg">
-            <img src="..\images\3.jpg">
-            <img src="..\images\4.jpg">
-            <img src="..\images\5.jpg">
-            <img src="..\images\6.jpg">
+            <img src="images\1.png">
+            <img src="images\2.jpg">
+            <img src="images\3.jpg">
+            <img src="images\4.jpg">
+            <img src="images\5.jpg">
+            <img src="images\6.jpg">
         </div>
 
         <div class="pricelist"><h2>Pricelist</h2></div>
