--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="This is a site about MEK Hair Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Company - MEK Hair Studio - Birmingham</title>
-        <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/topnavbar.css">
         <link rel="stylesheet" type="text/css" href="css/fpic.css">
