--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/team.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/gallery.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/pricelist.css">
-        <!--<link rel="stylesheet" type="text/css" href="..\css\footer.css">-->
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/footer.css">
         
         <script src="JavaScript\navbar.js"></script>
     </head>
