--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/pricelist.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/footer.css">
         
-        <script src="JavaScript\navbar.js"></script>
+        <script src="euripideschondros.github.io/JavaScript/navbar.js"></script>
     </head>
 
     <body>
