--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/team.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/gallery.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/pricelist.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/contact.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/footer.css">
         
         <script src="euripideschondros.github.io/JavaScript/navbar.js"></script>
@@ -109,6 +110,23 @@
                 </div>
             </section>
 
+        <div class="contact"><h5>Contact</h5></div>
+        <div class="container-contact">
+            <form>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your First name">
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your Last name">
+                <label for="mail">E- mail</label>
+                <input type="text" id="mail" name="email" placeholder="Your e- mail">
+                <label for="subject">Subject</label>
+                <textarea type="text" id="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+
+
         <footer>
             <div class="rowf">
                 <div>
@@ -119,12 +137,18 @@
                         <li>Where To Find</li>
                     </ul>
                     <ul class="columnf">
+                        <li class="title">Opening Hours</li>
+                        <li>MON, SUN Closed</li>
+                        <li>TUE, WED 10AM-5:30PM</li>
+                        <li>THU, FRI 11AM-7PM</li>
+                        <li>SAT 10AM-5PM</li>
+                    </ul>
+                    <ul class="columnf">
                         <li class="title">Contact</li>
-                        <li>Birmingham</li>
-                        <li>1234567899</li>
-                        <li>1234567888</li>
-                        <li>3443344334</li>
-                        <li>mekhairstudio@otenet.gr</li>
+                        <li>39 Station Road, Marston Green, West Midlands, B37 7AB</li>
+                        <li>0121 779 2743</li>
+                        <li>07483 950113</li>
+                        <li>info@bymek.com</li>
                     </ul>
                     <ul class="columnf">
                         <li class="title">Social Media</li>
@@ -136,7 +160,7 @@
         </footer>
         
         <div class="dfoot">
-            <h5>Coryright © 2021 mekhairstudio.gb | All Rights Reserved |  Design and Development by <a href="https://www.linkedin.com/in/euripides-chondros-201401134/">Evripidis Chondros</h5>
+            <h5>Coryright © 2021 www.bymek.com | All Rights Reserved |  Design and Development by <a href="https://www.linkedin.com/in/euripides-chondros-201401134/">Evripidis Chondros</h5>
         </div>
 
     </body>
