--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
         <meta name="description" content="This is a site about MEK Hair Studio">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Company - MEK Hair Studio - Birmingham</title>
-        <link rel="shortcut icon" href="..\images\favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="..\css\topBtn.css">
-        <link rel="stylesheet" type="text/css" href="..\css\topnavbar.css">
-        <link rel="stylesheet" type="text/css" href="..\css\fpic.css">
-        <link rel="stylesheet" type="text/css" href="..\css\welcome.css">
-        <link rel="stylesheet" type="text/css" href="..\css\services.css">
-        <link rel="stylesheet" type="text/css" href="..\css\where.css">
-        <link rel="stylesheet" type="text/css" href="..\css\team.css">
-        <link rel="stylesheet" type="text/css" href="..\css\gallery.css">
-        <link rel="stylesheet" type="text/css" href="..\css\pricelist.css">
-        <link rel="stylesheet" type="text/css" href="..\css\contact.css">
-        <link rel="stylesheet" type="text/css" href="..\css\footer.css">
-        <link rel="stylesheet" type="text/css" href="..\css\imgstyle.css">
+        <link rel="stylesheet" type="text/css" href="/css/topBtn.css">
+        <link rel="stylesheet" type="text/css" href="/css/topnavbar.css">
+        <link rel="stylesheet" type="text/css" href="/css/fpic.css">
+        <link rel="stylesheet" type="text/css" href="/css/welcome.css">
+        <link rel="stylesheet" type="text/css" href="/css/services.css">
+        <link rel="stylesheet" type="text/css" href="/css/where.css">
+        <link rel="stylesheet" type="text/css" href="/css/team.css">
+        <link rel="stylesheet" type="text/css" href="/css/gallery.css">
+        <link rel="stylesheet" type="text/css" href="/css/pricelist.css">
+        <link rel="stylesheet" type="text/css" href="/css/contact.css">
+        <link rel="stylesheet" type="text/css" href="/css/footer.css">
+        <link rel="stylesheet" type="text/css" href="/css/imgstyle.css">
         
-        <script src="..\JavaScript\topBtn.js"></script>
-        <script src="..\JavaScript\navbar.js"></script>
-        <script src="..\JavaScript\teameff.js"></script>
-        <script src="..\JavaScript\pricelist.js"></script>
+        <script src="/JavaScript/topBtn.js"></script>
+        <script src="/JavaScript/navbar.js"></script>
+        <script src="/JavaScript/teameff.js"></script>
+        <script src="/JavaScript/pricelist.js"></script>
         
     </head>
 
