--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         <title>Company - MEK Hair Studio - Birmingham</title>
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/topBtn.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/topnavbar.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/fpic.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/welcome.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/services.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/where.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/team.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/gallery.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/pricelist.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/contact.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/footer.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/css/imgstyle.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/topBtn.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/topnavbar.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/fpic.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/welcome.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/services.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/where.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/team.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/gallery.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/pricelist.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/contact.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/footer.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/imgstyle.css">
         
         <script src="euripideschondros.github.io/JavaScript/topBtn.js"></script>
         <script src="euripideschondros.github.io/JavaScript/navbar.js"></script>
