--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <title>Company - MEK Hair Studio - Birmingham</title>
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/topBtn.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/topnavbar.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/fpic.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/CSS/topBtn.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/CSS/topnavbar.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/CSS/fpic.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/welcome.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/services.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/where.css">
