--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/topBtn.css">
         <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/topnavbar.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/CSS/fpic.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/welcome.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/services.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/where.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/team.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/gallery.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/pricelist.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/contact.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros.github.io/CSS/imgstyle.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/fpic.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/welcome.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/services.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/where.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/team.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/gallery.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/pricelist.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/contact.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/footer.css">
+        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/imgstyle.css">
         
-        <script src="euripideschondros.github.io/JavaScript/topBtn.js"></script>
-        <script src="euripideschondros.github.io/JavaScript/navbar.js"></script>
-        <script src="euripideschondros.github.io/JavaScript/teameff.js"></script>
-        <script src="euripideschondros.github.io/JavaScript/pricelist.js"></script>
+        <script src="euripideschondros/euripideschondros.github.io/JavaScript/topBtn.js"></script>
+        <script src="euripideschondros/euripideschondros.github.io/JavaScript/navbar.js"></script>
+        <script src="euripideschondros/euripideschondros.github.io/JavaScript/teameff.js"></script>
+        <script src="euripideschondros/euripideschondros.github.io/JavaScript/pricelist.js"></script>
         
     </head>
 
