--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <link rel="stylesheet" type="text/css" href="../CSS/topBtn.css">
         <link rel="stylesheet" type="text/css" href="../CSS/topnavbar.css">
         <link rel="stylesheet" type="text/css" href="../CSS/fpic.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/welcome.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/services.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/where.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/team.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/gallery.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/pricelist.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/contact.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="euripideschondros/euripideschondros.github.io/CSS/imgstyle.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/welcome.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/services.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/where.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/team.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/gallery.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/pricelist.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/contact.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/imgstyle.css">
         
-        <script src="euripideschondros/euripideschondros.github.io/JavaScript/topBtn.js"></script>
-        <script src="euripideschondros/euripideschondros.github.io/JavaScript/navbar.js"></script>
-        <script src="euripideschondros/euripideschondros.github.io/JavaScript/teameff.js"></script>
-        <script src="euripideschondros/euripideschondros.github.io/JavaScript/pricelist.js"></script>
+        <script src="../JavaScript/topBtn.js"></script>
+        <script src="../JavaScript/navbar.js"></script>
+        <script src="../JavaScript/teameff.js"></script>
+        <script src="../JavaScript/pricelist.js"></script>
         
     </head>
 
