--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
 
         <nav class="topnav" id="myTopnav">
-            <img id="navlogo" src="..\images\meklogo.jpg" alt="MEK Logo">
+            <img id="navlogo" src="../images/meklogo.jpg" alt="MEK Logo">
             <a href="#contactsection" class="active">Contact</a>
             <a href="#pricesection">Prices</a>
             <a href="#teamsection">Team</a>
@@ -46,9 +46,9 @@
         </nav>
 
         <div class="fpic" id="homesection">
-            <img id="fpic" src="..\images\first.jpg" alt="hair studio">
+            <img id="fpic" src="../images/first.jpg" alt="hair studio">
             <div class="abouttext">
-                <img id="mek" src="..\images\meklogo.jpg">
+                <img id="mek" src="../images/meklogo.jpg">
             </div>
         </div>
 
@@ -63,11 +63,11 @@
 
         <div class="row">
             <div class="column">
-                <img id="cutimg" src="..\images\cuts.png" alt="cuts">
+                <img id="cutimg" src="../images/cuts.png" alt="cuts">
                 <h6>Cuts</h6>
             </div>
             <div class="column">
-                <img id="therapyimg" src="..\images\therapy.png" alt="therapy">
+                <img id="therapyimg" src="../images/therapy.png" alt="therapy">
                 <h6>Therapies</h6>
             </div>
             <div class="column">
