--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <link rel="stylesheet" type="text/css" href="../CSS/gallery.css">
         <link rel="stylesheet" type="text/css" href="../CSS/pricelist.css">
         <link rel="stylesheet" type="text/css" href="../CSS/contact.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/imgstyle.css">
+        <link rel="stylesheet" type="text/css" href="CSS/footer.css">
+        <link rel="stylesheet" type="text/css" href="CSS/imgstyle.css">
         
-        <script src="../JavaScript/topBtn.js"></script>
-        <script src="../JavaScript/navbar.js"></script>
-        <script src="../JavaScript/teameff.js"></script>
-        <script src="../JavaScript/pricelist.js"></script>
+        <script src="JavaScript/topBtn.js"></script>
+        <script src="JavaScript/navbar.js"></script>
+        <script src="JavaScript/teameff.js"></script>
+        <script src="JavaScript/pricelist.js"></script>
         
     </head>
 
