--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <link rel="stylesheet" type="text/css" href="../CSS/gallery.css">
         <link rel="stylesheet" type="text/css" href="../CSS/pricelist.css">
         <link rel="stylesheet" type="text/css" href="../CSS/contact.css">
-        <link rel="stylesheet" type="text/css" href="CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="CSS/imgstyle.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/imgstyle.css">
         
         <script src="JavaScript/topBtn.js"></script>
         <script src="JavaScript/navbar.js"></script>
@@ -46,7 +46,7 @@
         </nav>
 
         <div class="fpic" id="homesection">
-            <img id="fpic" src="../images/first.jpg" alt="hair studio">
+            <img id="fpic" src="../images/first1.jpg" alt="hair studio">
             <div class="abouttext">
                 <img id="mek" src="../images/meklogo.jpg">
             </div>
@@ -85,29 +85,32 @@
         <div class="team" id="teamsection"><h2>Team</h2></div>
 
         <div class="flex-container">
-            <div class="ireneimg"><img id="irene" src="..\images\itsme.jpg" height="100px" width="100px"></div>
+            <div class="ireneimg"><img id="irene" src="..\images\Irene.jpg" height="100px" width="100px"></div>
             <div><p>Hi, my name is Irene <br>and i' m the founder of MEK Hair Studio<br>
             I start when i was 16.<br> Thanks a lot.</p></div>
             <div><p>Hi, my name is Katerina <br>and i' m the co- founder of MEK Hair Studio<br>
                 I start when i was 16.<br> Thanks a lot.</p></div>
-            <div><img id="katerina" src="..\images\itsme.jpg" height="100px" width="100px"></div>
+            <div><img id="katerina" src="..\images\Cathrine.jpg" height="100px" width="100px"></div>
         </div>
 
         <div class="gallery"><h2>Gallery</h2></div>
         <div class="imgcontainer">
-            <img id="img1" src="..\images\1.png">
+            <img id="img1" src="..\images\1.jpg">
             <img id="img2" src="..\images\2.jpg">
             <img id="img3" src="..\images\3.jpg">
             <img id="img4" src="..\images\4.jpg">
             <img id="img5" src="..\images\5.jpg">
             <img id="img6" src="..\images\6.jpg">
+            <img id="img4" src="..\images\7.jpg">
+            <img id="img5" src="..\images\8.jpg">
+            <img id="img6" src="..\images\9.jpg">
         </div>
 
         <div class="pricelist" id="pricesection"><h2>Pricelist</h2></div>
         <div class="tab">
             <button class="tablinks" onclick="openCat(event, 'Woman')">Women</button>
             <button class="tablinks" onclick="openCat(event, 'Man')">Men</button>
-            <button class="tablinks" onclick="openCat(event, 'Child')">Children</button>
+            <button class="tablinks" onclick="openCat(event, 'Child')">Kids</button>
         </div>
 
         <section class="productList" id="Woman">
@@ -195,14 +198,14 @@
                     </ul>
                     <ul class="columnf">
                         <li class="title">Contact</li>
-                        <li><img id="location" src="..\images\loc.jpg"> 39 Station Road,<br> Marston Green,<br> West Midlands,<br> B37 7AB</li>
-                        <li><img id="phone" src="..\images\phone.png"><a href="tel:0121 779 2743">0121 779 2743</a></li>
-                        <li><img id="mphone" src="..\images\mphone.png"><a href="tel:07483 950113">07483 950113</a></li>
-                        <li><img id="mailicon" src="..\images\mail.jpg"><a href="mailto:info@bymek.com">info@bymek.com</a></li>
+                        <li><img id="location" src="../images/loc.jpg"> 39 Station Road,<br> Marston Green,<br> West Midlands,<br> B37 7AB</li>
+                        <li><img id="phone" src="../images/phone.png"><a href="tel:0121 779 2743">0121 779 2743</a></li>
+                        <li><img id="mphone" src="../images/mphone.png"><a href="tel:07483 950113">07483 950113</a></li>
+                        <li><img id="mailicon" src="../images/mail.jpg"><a href="mailto:info@bymek.com">info@bymek.com</a></li>
                     </ul>
                     <ul class="columnf">
                         <li class="title">Social Media</li>
-                        <li><i class="fa fa-facebook"></i></li>
+                        <li><a href="https://www.facebook.com/MEK-Hair-Studio-100370185313333"><i class="fa fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
