--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta lang="en-GB">
-        <meta name="keywords" content="mek hair studio, Birmingham, hair cuts, styles, colouring, beard trim, waxing">
-        <meta name="description" content="This is a site about MEK Hair Studio">
+        <meta name="keywords" content="MEK Hair Studio, Birmingham, hair, cuts, styles, colouring, beard, trim, waxing,
+        07483950113, 01217792743, 39 Station Road, Marston Green, West Midlands, B37 7AB">
+        <meta name="description" content="MEK Hair Studio is a hair salon in Birmingham">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Company - MEK Hair Studio - Birmingham</title>
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
