--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
 
         <div class="fpic" id="homesection">
-            <img id="fpic" src="../images/first1.jpg" alt="hair studio">
+            <img id="fpic" src="../images/first1.JPG" alt="hair studio">
             <div class="abouttext">
                 <img id="mek" src="../images/meklogo.jpg">
             </div>
@@ -91,7 +91,7 @@
             I start when i was 16.<br> Thanks a lot.</p></div>
             <div><p>Hi, my name is Katerina <br>and i' m the co- founder of MEK Hair Studio<br>
                 I start when i was 16.<br> Thanks a lot.</p></div>
-            <div><img id="katerina" src="..\images\Cathrine.jpg" height="100px" width="100px"></div>
+            <div><img id="katerina" src="..\images\Catherine.jpg" height="100px" width="100px"></div>
         </div>
 
         <div class="gallery"><h2>Gallery</h2></div>
