--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 
         <div class="welcome" id="companysection">
             <h1>Welcome</h1>
-            <p>MEK Hair Studio and the Hair Experts Irene and Katerina,<br> for more than 10 years,<br>
+            <p>MEK Hair Studio and the Hair Experts Irene and Catherine,<br> for more than 10 years,<br>
                  provides the highest quality services for your hair and beauty.<br>
-                From city of Kavala in Greece now to Birmingham.</p>
+                From city of Kavala in Greece now to Birmingham.<br>Love the brands we use?<br>Home care
+                is super important to keep your skin and hair looking<br> and feeling it' s best always!<br>
+                We have a full range of skin care and haircare products available to buy in the salon.<br>
+                Book a free of charge consultation to talk over skincare or<br>simply send us an email to info@bymek.com</p>
         </div>
 
         <div class="serv" id="servicessection">Services</div>
