--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             <div class="ireneimg"><img id="irene" src="..\images\Irene.jpg" height="100px" width="100px"></div>
             <div><p>Art Director<br>Irene Kotsaki<br>Her love for modern art and fashion, 
                 as well as her passion for hairdressing is reflected in her creations,<br> 
-                that the harmony in color is absolute and this is confirmed daily by his loyal customers<br>
-                She deals with hairdressing from a young age, with studies and seminars in Greece</p></div>
+                that the harmony in color is absolute <br>and this is confirmed daily by his loyal customers<br>
+                She deals with hairdressing from a young age,<br> with studies and seminars in Greece</p></div>
             <div><p>Technical Advisor<br>Catherine Kotsaki<br>"The fidelity of the colors, the parallel nourishment,<br> 
-                the reconstruction, the deep hydration and the shine of the hair are the ideal for every woman's hair!"<br>
-                Beloved and beloved for the way she communicates with the people in the hairdresser MEK but at the same time<br> 
-                deeply devoted to beauty, she offers premium services of high level for the care and care of the hair,<br> 
+                the reconstruction, the deep hydration and<br> the shine of the hair are the ideal for every woman's hair!"<br>
+                Beloved and beloved for the way she communicates<br> with the people in the hairdresser MEK but at the same time<br> 
+                deeply devoted to beauty, she offers premium services<br> of high level for the care and care of the hair,<br> 
                 the color, the haircut, the hairstyle, the style!<br>
                 Catherine started working as a hairdresser, with studies and seminars in Greece</p></div>
             <div><img id="katerina" src="..\images\Catherine.jpg" height="100px" width="100px"></div>
