--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
         <div class="flex-container">
             <div class="ireneimg"><img id="irene" src="..\images\Irene.jpg" height="100px" width="100px"></div>
-            <div><p>Art Director<br>Irene Kotsaki<br>Her love for modern art and fashion, 
-                as well as her passion for hairdressing is reflected in her creations,<br> 
+            <div><p>Art Director<br>Irene Kotsaki<br>Her love for modern art and fashion,<br> 
+                as well as her passion for hairdressing<br> is reflected in her creations,<br> 
                 that the harmony in color is absolute <br>and this is confirmed daily by his loyal customers<br>
                 She deals with hairdressing from a young age,<br> with studies and seminars in Greece</p></div>
             <div><p>Technical Advisor<br>Catherine Kotsaki<br>"The fidelity of the colors, the parallel nourishment,<br> 
