--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                 as well as her passion for hairdressing<br> is reflected in her creations,<br> 
                 that the harmony in color is absolute <br>and this is confirmed daily<br> by his loyal customers<br>
                 She deals with hairdressing from a young age,<br> with studies and seminars in Greece</p></div>
-            <div><p>Technical Advisor<br>Catherine Kotsaki<br>"The fidelity of the colors,<br> 
-                the reconstruction, the deep hydration and<br> the shine of the hair<br>are the ideal for every woman's hair!"<br>
+            <div><p>Technical Advisor<br>Catherine Kotsaki<br>
                 Beloved and beloved <br>for the way she communicates<br> with the people in the <br>hairdresser MEK but at the same time<br> 
                 deeply devoted to beauty, <br>she offers premium services<br> of high level for the care <br>and care of the hair,<br> 
                 the color, the haircut, <br>the hairstyle, the style!<br>
