--- a/index.html
+++ b/index.html
@@ -124,37 +124,88 @@
 
         <section class="productList" id="Woman">
             <div class="product">
-                <span class="name">Woman Haircut</span><span class="price">from 18£</span>
+                <span class="name">Wash & Cut</span><span class="price">20£</span>
             </div>
             <div class="product">
-                <span class="name">Styling</span><span class="price">from 18£</span>
+                <span class="name">Wash & Blowdry</span><span class="price">20£</span>
             </div>
             <div class="product">
-                <span class="name">Braides</span><span class="price">from 18£</span>
+                <span class="name">Wash & Cut & Blowdry</span><span class="price">35£</span>
             </div>
             <div class="product">
-                <span class="name">Permanant</span><span class="price">from 18£</span>
+                <span class="name">Wash & Set</span><span class="price">21£</span>
+            </div>
+            <div class="product">
+                <span class="name">Special Styling</span><span class="price">35£</span>
+            </div>
+            <div class="product">
+                <span class="name">Wedding Hairstyles(with 2 Trials)</span><span class="price">from 350£</span>
+            </div>
+            <div class="product">
+                <span class="name">Straightening & Wash & Blowdry</span><span class="price">from 160£</span>
+            </div>
+            <div class="product">
+                <span class="name">Perms & Wash & Cut & Blowdry</span><span class="price">from 80£</span>
+            </div>
+            <div class="product">
+                <span class="name">Extensions & Wash & Blowdry</span><span class="price">from 150£</span>
+            </div>
+            <div class="product">
+                <span class="name">Tint</span><span class="price">from 50£</span>
+            </div>
+            <div class="product">
+                <span class="name">Tint & Blowdry</span><span class="price">from 65£</span>
+            </div>
+            <div class="product">
+                <span class="name">Tint & Cut & Blowdry</span><span class="price">from 84£</span>
+            </div>
+            <div class="product">
+                <span class="name">Colour Root Hair</span><span class="price">from 40£</span>
+            </div>
+            <div class="product">
+                <span class="name">Colour Root Hair & Blowdry</span><span class="price">from 55£</span>
+            </div>
+            <div class="product">
+                <span class="name">Colour Root Hair & Cut & Blowdry</span><span class="price">from 74£</span>
+            </div>
+            <div class="product">
+                <span class="name">Highlights & Blowdry</span><span class="price">from 75£</span>
+            </div>
+            <div class="product">
+                <span class="name">Highlights & Cut & Blowdry</span><span class="price">from 90£</span>
+            </div>
+            <div class="product">
+                <span class="name">Colour Techniques & Blowdry</span><span class="price">from 60£</span>
+            </div>
+            <div class="product">
+                <span class="name">Tint & Highlights & Cut & Blowdry</span><span class="price">from 120£</span>
+            </div>
+            <div class="product">
+                <span class="name">Tint & Colour Techniques & Cut & Blowdry</span><span class="price">from 115£</span>
+            </div>
+            <div class="product">
+                <span class="name">Discount on retired ladies in Tint and Colour Techniques</span><span class="price">15%</span>
             </div>
         </section>
 
         <section class="productList" id="Man">
             <div class="product">
-                <span class="name">Haircut</span><span class="price">from 18£</span>
+                <span class="name">Cut</span><span class="price">20£</span>
             </div>
             <div class="product">
-                <span class="name">Shave</span><span class="price">from 10£</span>
+                <span class="name">Beard</span><span class="price">from 7£</span>
             </div>
             <div class="product">
-                <span class="name">Grooming</span><span class="price">from 15£</span>
+                <span class="name">Cut & Beard</span><span class="price">from 25£</span>
+            </div>
+            <div class="product">
+                <span class="name">Discount for retired gentlemen</span><span class="price">15%</span>
             </div>
         </section>
 
         <section class="productList" id="Child">
             <div class="product">
-                <span class="name">Haircut</span><span class="price">from 10£</span>
-            </div>
-            <div class="product">
-                <span class="name">Style</span><span class="price">from 8£</span>
+                <span class="name">Cut</span><span class="price">15£</span>
             </div>
         </section>
 
