--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <h1>Welcome</h1>
             <p>MEK Hair Studio and the Hair Experts Irene and Catherine,<br> for more than 10 years,<br>
                  provides the highest quality services for your hair and beauty.<br>
-                From city of Kavala in Greece now to Birmingham.<br>Love the brands we use?<br>Home care
-                is super important to keep your skin and hair looking<br> and feeling it' s best always!<br>
-                We have a full range of skin care and haircare products available to buy in the salon.<br>
+                From city of Kavala in Greece now to Birmingham.<br><b>Love the brands we use?</b><br>Home care
+                is super important to keep hair looking<br> and feeling it' s best always!<br>
+                We have a full range of haircare products available to buy in the salon.<br>
                 Book a free of charge consultation to talk over skincare or<br>simply send us an email to info@bymek.com</p>
         </div>
 
@@ -75,7 +75,7 @@
                 <h6>Therapies</h6>
             </div>
             <div class="column">
-                <img id="stylingimg" src="..\images\styling.png" alt="styling">
+                <img id="stylingimg" src="../images/styling.png" alt="styling">
                 <h6>Styling</h6>
             </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="team" id="teamsection"><h2>Team</h2></div>
 
         <div class="flex-container">
-            <div class="ireneimg"><img id="irene" src="..\images\Irene.jpg" height="100px" width="100px"></div>
+            <div class="ireneimg"><img id="irene" src="../images/Irene.jpg" height="100px" width="100px"></div>
             <div><p>Art Director<br>Irene Kotsaki<br>Her love for modern art and fashion,<br> 
                 as well as her passion for hairdressing<br> is reflected in her creations,<br> 
                 that the harmony in color is absolute <br>and this is confirmed daily<br> by his loyal customers<br>
@@ -104,15 +104,15 @@
 
         <div class="gallery"><h2>Gallery</h2></div>
         <div class="imgcontainer">
-            <img id="img1" src="..\images\1.jpg">
-            <img id="img2" src="..\images\2.jpg">
-            <img id="img3" src="..\images\3.jpg">
-            <img id="img4" src="..\images\4.jpg">
-            <img id="img5" src="..\images\5.jpg">
-            <img id="img6" src="..\images\6.jpg">
-            <img id="img4" src="..\images\7.jpg">
-            <img id="img5" src="..\images\8.jpg">
-            <img id="img6" src="..\images\9.jpg">
+            <img id="img1" src="../images/1.jpg">
+            <img id="img2" src="../images/2.jpg">
+            <img id="img3" src="../images/3.jpg">
+            <img id="img4" src="../images/4.jpg">
+            <img id="img5" src="../images/5.jpg">
+            <img id="img6" src="../images/6.jpg">
+            <img id="img4" src="../images/7.jpg">
+            <img id="img5" src="../images/8.jpg">
+            <img id="img6" src="../images/9.jpg">
         </div>
 
         <div class="pricelist" id="pricesection"><h2>Pricelist</h2></div>
