--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 From city of Kavala in Greece now to Birmingham.<br><b>Love the brands we use?</b><br>Home care
                 is super important to keep hair looking<br> and feeling it' s best always!<br>
                 We have a full range of haircare products available to buy in the salon.<br>
-                Book a free of charge consultation to talk over skincare or<br>simply send us an email to info@bymek.com</p>
+                Book a free of charge consultation to talk over skincare or<br>simply send us an email to <br><i>info@bymek.com</i></p>
         </div>
 
         <div class="serv" id="servicessection">Services</div>
